--- a/index.css
+++ b/index.css
@@ -7,9 +7,9 @@ body {
   position: relative;
 }
 .header {
-    position: sticky;
-    top: 0;
-    z-index: 99;
+  position: sticky;
+  top: 0;
+  z-index: 99;
   background-color: white;
   height: vh;
   background-repeat: no-repeat;
@@ -38,17 +38,16 @@ body {
   letter-spacing: 0em;
   text-align: left;
 }
-.icons{
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
+.icons {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
 }
 .nav-item {
   color: #515151;
   text-decoration: none;
   font-weight: 700;
   font-size: 14px;
-  transition: color 0.2s linear;
 }
 .header-logo {
   margin-left: -100px;
@@ -60,9 +59,8 @@ body {
   margin-left: 90px;
 }
 .member-container {
-    flex-wrap: wrap;
-    
-  }
+  flex-wrap: wrap;
+}
 .members-title {
   display: flex;
   padding-top: 50px;
@@ -76,16 +74,16 @@ body {
   color: #000;
 }
 .member-items {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
   display: flex;
   justify-content: space-around;
-  box-shadow: 10px 20px 8px rgba(0,0,0,0.1);
+  box-shadow: 10px 20px 8px rgba(0, 0, 0, 0.1);
   padding-bottom: 50px;
 }
 .member1-item {
-   border: 5px solid#34D8A1;
-   border-radius: 10 px 20px 30px;
-   overflow: hidden;
+  border: 5px solid#34D8A1;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
   background-color: white;
   text-align: center;
   width: 20%;
@@ -94,82 +92,82 @@ body {
   padding-bottom: 0px;
 }
 .member2-item {
-    border: 5px solid #CF86E0;
-    border-radius: 10 px 20px 30px;
-    overflow: hidden;
-   background-color: white;
-   text-align: center;
-   width: 20%;
-   height: 300px;
-   margin-top: 38px;
-   padding-bottom: 0px;
- }
- .member3-item {
-    border: 5px solid #FAB483;
-    border-radius: 10 px 20px 30px;
-    overflow: hidden;
-   background-color: white;
-   text-align: center;
-   width: 20%;
-   height: 300px;
-   margin-top: 38px;
-   padding-bottom: 0px;
- }
- .member4-item {
-    border: 5px solid #5DC2EA;
-    border-radius: 10 px 20px 30px;
-    overflow: hidden;
-   background-color: white;
-   text-align: center;
-   width: 20%;
-   height: 300px;
-   margin-top: 38px;
-   padding-bottom: 0px;
- }
- .member5-item {
-    border: 5px solid #EEBD3D;
-    border-radius: 10 px 20px 30px;
-    overflow: hidden;
-   background-color: white;
-   text-align: center;
-   width: 20%;
-   height: 300px;
-   margin-top: 38px;
-   padding-bottom: 0px;
- }
- .member6-item {
-    border: 5px solid#E17272;
-    border-radius: 10 px 20px 30px;
-    overflow: hidden;
-   background-color: white;
-   text-align: center;
-   width: 20%;
-   height: 300px;
-   margin-top: 38px;
-   padding-bottom: 0px;
- }
- .member7-item {
-    border: 5px solid #E53253;
-    border-radius: 10 px 20px 30px;
-    overflow: hidden;
-   background-color: white;
-   text-align: center;
-   width: 20%;
-   height: 300px;
-   margin-top: 38px;
-   padding-bottom: 0px;
- }
- .member8-item {
-    border: 5px solid#458CB2;
-    border-radius: 10 px 20px 30px;
-    overflow: hidden;
-   background-color: white;
-   text-align: center;
-   width: 20%;
-   height: 300px;
-   margin-top: 38px;
-   padding-bottom: 0px;
- }
+  border: 5px solid #cf86e0;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  width: 20%;
+  height: 300px;
+  margin-top: 38px;
+  padding-bottom: 0px;
+}
+.member3-item {
+  border: 5px solid #fab483;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  width: 20%;
+  height: 300px;
+  margin-top: 38px;
+  padding-bottom: 0px;
+}
+.member4-item {
+  border: 5px solid #5dc2ea;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  width: 20%;
+  height: 300px;
+  margin-top: 38px;
+  padding-bottom: 0px;
+}
+.member5-item {
+  border: 5px solid #eebd3d;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  width: 20%;
+  height: 300px;
+  margin-top: 38px;
+  padding-bottom: 0px;
+}
+.member6-item {
+  border: 5px solid#E17272;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  width: 20%;
+  height: 300px;
+  margin-top: 38px;
+  padding-bottom: 0px;
+}
+.member7-item {
+  border: 5px solid #e53253;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  width: 20%;
+  height: 300px;
+  margin-top: 38px;
+  padding-bottom: 0px;
+}
+.member8-item {
+  border: 5px solid#458CB2;
+  border-radius: 10 px 20px 30px;
+  overflow: hidden;
+  background-color: white;
+  text-align: center;
+  width: 20%;
+  height: 300px;
+  margin-top: 38px;
+  padding-bottom: 0px;
+}
 .member-text {
   font-family: "Tinos", serif;
   font-size: 26px;
@@ -182,46 +180,71 @@ body {
 .member-image {
   position: relative;
 }
-.member-box{
-    width: 300px;
-height: 78.22px;
-top: 222.15px;
-
+.member-box {
+  width: 300px;
+  height: 78.22px;
+  top: 222.15px;
 }
-.coment{
-    display: flex;
+.coment {
+  display: flex;
 }
 .coment-down {
-    padding-top: 50px;
-    padding-bottom: 140px;
-    padding-left: 100px;
-    gap: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .footer {
-    background-color: #4A4A4A;
-    padding: 50px 0px;
-    color: #fff;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-  }
-  .footer-icons{
-    display: flex;
-    justify-content: space-between;
-  }
-  .location {
-    position: relative;
-  }
-  .location-img{
-    position: absolute;
-    right: 17px;
-    text-decoration: none;
-  }
-  .num {
-    text-decoration: none;
-    color: white;
-    font-weight: 700;
-  }
+  padding-top: 50px;
+  padding-bottom: 140px;
+  padding-left: 100px;
+  gap: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer {
+  background-color: #4a4a4a;
+  padding: 20px 0px;
+  color: #fff;
+ text-decoration: none;
+
+}
+.footer-icons {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+.location{
+  
+  display: flex;
+}
+.location-img {
+  position: relative;
+  right: 90px;
+  display: flex;
+  margin-left: 40px;
+}
+.loc {
+ padding-left: 40px;
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
+  display: flex;
+  margin-right: 145px;
+}
+.line{
+ display: flex;
+ justify-content: center;
+ margin-left: 100px;
+}
+.phone{
+  display: flex;
+}
+.num {
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  display: flex;
+}
+.app{
+  text-decoration: none;
+  display: flex;
+  padding-right: 100px;
+  gap: 25px;
+}
